# BaoClaw

./: .gitignore  LICENSE  README.md  install.sh  start.sh
.baoclaw/: BAOCLAW.md  todo.json
baoclaw-core/: Cargo.toml
baoclaw-core/src/: config.rs  lib.rs  main.rs  telemetry.rs  updater.rs
baoclaw-telegram/: package-lock.json  package.json
baoclaw-web/: baoclaw-web.sh  package-lock.json  package.json
baoclaw-whatsapp/: package-lock.json  package.json
book/: README.md  book.html  combined.md  style.css
claude-core/: Cargo.toml
claude-core/src/: main.rs
claude-core/src/api/: client.rs  mod.rs  retry.rs
claude-core/src/bridge/: manager.rs  mod.rs
claude-core/src/discovery/: mcp_config.rs  mod.rs  skills.rs
claude-core/src/engine/: error_handling.rs  mod.rs  query_engine.rs
claude-core/src/ipc/: events.rs  mod.rs  protocol.rs  router.rs  server.rs
claude-core/src/mcp/: client.rs  mod.rs
claude-core/src/models/: message.rs  task.rs
claude-core/src/permissions/: manager.rs  mod.rs
claude-core/src/state/: manager.rs  mod.rs
claude-core/src/tools/: executor.rs  mod.rs  trait_def.rs
claude-core/src/tools/builtins/: bash_tool.rs  file_edit_tool.rs  file_write_tool.rs  mod.rs  path_utils.rs
claude-core/tests/: pbt_compact.rs  pbt_fallback.rs  pbt_grep_tool.rs  pbt_permission_deny.rs  pbt_project_instructions.rs  pbt_transcript.rs
ts-ipc/: cli.ts  client.ts  esm-import-extension.test.ts  index.ts  markdownRenderer.ts  package-lock.json  package.json  rustCore.ts  streamHandler.ts  tsconfig.json  types.ts  useRustEngine.ts
(+104 files in other folders)
