[package]
name = "claude-core"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
rand = "0.8"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
urlencoding = "2"
ignore = "0.4"
jsonwebtoken = "9"
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
